fixed linebreak in prelims and cleaned up codebase

--- a/frontend/src/styles/instantSearch.scss
+++ b/frontend/src/styles/instantSearch.scss
@@ -179,6 +179,10 @@
       padding: 1rem;
       margin: 1rem 0;
 
+      .ais-Highlight {
+        white-space: pre-line;
+      }
+
       .ais-Highlight-highlighted {
         position: relative;
         font-weight: bolder;
